name:                jot
version:             0.1.0.0
synopsis:            Text editor
description:         Text editor
homepage:            https://github.com/tldrlol/jot
license:             ISC
license-file:        LICENSE
author:              Daniel Kirillov
maintainer:          tldrlol@protonmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall

  exposed-modules:   Jot.Buffer
                   , Jot.History
                   , Jot.Rope

  build-depends:     base >=4.9 && <4.10
                   , bytestring
                   , fingertree

source-repository head
  type:              git
  location:          https://github.com/tldrlol/jot
